--- a/LemonPlatform.Core/LemonPlatform.Core.csproj
+++ b/LemonPlatform.Core/LemonPlatform.Core.csproj
@@ -15,4 +15,8 @@
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Infrastructures\Messages\" />
+	</ItemGroup>
+
 </Project>
