--- a/LemonPlatform.Wpf/LemonPlatform.Wpf.csproj
+++ b/LemonPlatform.Wpf/LemonPlatform.Wpf.csproj
@@ -14,6 +14,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\LemonPlatform.BusyIndicator\LemonPlatform.BusyIndicator.csproj" />
 		<ProjectReference Include="..\LemonPlatform.Core\LemonPlatform.Core.csproj" />
 	</ItemGroup>
 
