--- a/LemonPlatform.Wpf/LemonPlatform.Wpf.csproj
+++ b/LemonPlatform.Wpf/LemonPlatform.Wpf.csproj
@@ -14,6 +14,18 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <COMReference Include="IWshRuntimeLibrary">
+	    <WrapperTool>tlbimp</WrapperTool>
+	    <VersionMinor>0</VersionMinor>
+	    <VersionMajor>1</VersionMajor>
+	    <Guid>f935dc20-1cf0-11d0-adb9-00c04fd58a0b</Guid>
+	    <Lcid>0</Lcid>
+	    <Isolated>false</Isolated>
+	    <EmbedInteropTypes>true</EmbedInteropTypes>
+	  </COMReference>
+	</ItemGroup>
+
+	<ItemGroup>
 		<ProjectReference Include="..\LemonPlatform.BusyIndicator\LemonPlatform.BusyIndicator.csproj" />
 		<ProjectReference Include="..\LemonPlatform.Core\LemonPlatform.Core.csproj" />
 	</ItemGroup>
@@ -36,7 +48,6 @@
 
 	<ItemGroup>
 	  <Folder Include="Resources\Images\" />
-	  <Folder Include="Services\" />
 	</ItemGroup>
 
 	<ItemGroup>
