--- a/LemonPlatform.Wpf/LemonPlatform.Wpf.csproj
+++ b/LemonPlatform.Wpf/LemonPlatform.Wpf.csproj
@@ -28,6 +28,7 @@
 	<ItemGroup>
 		<ProjectReference Include="..\LemonPlatform.BusyIndicator\LemonPlatform.BusyIndicator.csproj" />
 		<ProjectReference Include="..\LemonPlatform.Core\LemonPlatform.Core.csproj" />
+		<ProjectReference Include="..\LemonPlatform.SQLite\LemonPlatform.SQLite.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
