--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -12,5 +12,11 @@
     <PackageVersion Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
     <PackageVersion Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageVersion Include="NLog.Extensions.Logging" Version="5.3.15" />
+    <PackageVersion Include="Quartz" Version="3.13.1" />
+    <PackageVersion Include="Quartz.Extensions.DependencyInjection" Version="3.13.1" />
+    <PackageVersion Include="Quartz.Extensions.Hosting" Version="3.13.1" />
+    <PackageVersion Include="Quartz.Jobs" Version="3.13.1" />
+    <PackageVersion Include="Quartz.Plugins" Version="3.13.1" />
+    <PackageVersion Include="Quartz.Serialization.SystemTextJson" Version="3.13.1" />
   </ItemGroup>
 </Project>
