--- a/LemonPlatform.Core/LemonPlatform.Core.csproj
+++ b/LemonPlatform.Core/LemonPlatform.Core.csproj
@@ -13,10 +13,24 @@
 		<PackageReference Include="LiveChartsCore.SkiaSharpView.WPF" />
 		<PackageReference Include="MaterialDesignThemes" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
+
+		<PackageReference Include="Quartz" />
+		<PackageReference Include="Quartz.Extensions.DependencyInjection" />
+		<PackageReference Include="Quartz.Extensions.Hosting" />
+		<PackageReference Include="Quartz.Jobs" />
+		<PackageReference Include="Quartz.Plugins" />
+		<PackageReference Include="Quartz.Serialization.SystemTextJson" />
+
+		<PackageReference Include="Microsoft.EntityFrameworkCore" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Infrastructures\Messages\" />
+		<Folder Include="Infrastructures\Messages\" />
 	</ItemGroup>
 
 </Project>
