--- a/LemonPlatform.Wpf/LemonPlatform.Wpf.csproj
+++ b/LemonPlatform.Wpf/LemonPlatform.Wpf.csproj
@@ -11,6 +11,7 @@
 
 	<ItemGroup>
 	  <None Remove="Resources\Icons\lemon.ico" />
+	  <None Remove="Resources\Images\lemon.png" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -47,11 +48,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Resources\Images\" />
-	</ItemGroup>
-
-	<ItemGroup>
 	  <Resource Include="Resources\Icons\lemon.ico" />
+	  <Resource Include="Resources\Images\lemon.png" />
 	</ItemGroup>
 
 </Project>
