--- a/LemonPlatform.Wpf/LemonPlatform.Wpf.csproj
+++ b/LemonPlatform.Wpf/LemonPlatform.Wpf.csproj
@@ -52,4 +52,8 @@
 	  <Resource Include="Resources\Images\lemon.png" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="ViewModels\UserControls\" />
+	</ItemGroup>
+
 </Project>
