--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,6 +1,7 @@
 <Project>
   <ItemGroup>
-    <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.4.0-preview2" />
+    <PackageVersion Include="CommunityToolkit.Diagnostics" Version="8.4.0-preview3" />
+    <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.4.0-preview3" />
     <PackageVersion Include="Hardcodet.NotifyIcon.Wpf" Version="2.0.1" />
     <PackageVersion Include="LiveChartsCore.SkiaSharpView.WPF" Version="2.0.0-rc2" />
     <PackageVersion Include="MaterialDesignThemes" Version="5.1.1-ci795" />
