--- a/LemonPlatform.Core/LemonPlatform.Core.csproj
+++ b/LemonPlatform.Core/LemonPlatform.Core.csproj
@@ -9,6 +9,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="CommunityToolkit.Diagnostics" />
 		<PackageReference Include="CommunityToolkit.Mvvm" />
 		<PackageReference Include="LiveChartsCore.SkiaSharpView.WPF" />
 		<PackageReference Include="MaterialDesignThemes" />
