--- a/LemonPlatform.Wpf/LemonPlatform.Wpf.csproj
+++ b/LemonPlatform.Wpf/LemonPlatform.Wpf.csproj
@@ -11,6 +11,7 @@
 
 	<ItemGroup>
 	  <None Remove="Resources\Icons\lemon.ico" />
+	  <None Remove="Resources\Images\home.png" />
 	  <None Remove="Resources\Images\lemon.png" />
 	</ItemGroup>
 
@@ -50,6 +51,7 @@
 
 	<ItemGroup>
 	  <Resource Include="Resources\Icons\lemon.ico" />
+	  <Resource Include="Resources\Images\home.png" />
 	  <Resource Include="Resources\Images\lemon.png" />
 	</ItemGroup>
 
