--- a/LemonPlatform.Core/LemonPlatform.Core.csproj
+++ b/LemonPlatform.Core/LemonPlatform.Core.csproj
@@ -11,6 +11,7 @@
 	<ItemGroup>
 		<PackageReference Include="CommunityToolkit.Diagnostics" />
 		<PackageReference Include="CommunityToolkit.Mvvm" />
+		<PackageReference Include="Flurl.Http" />
 		<PackageReference Include="LiveChartsCore.SkiaSharpView.WPF" />
 		<PackageReference Include="MaterialDesignThemes" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
