--- a/LemonPlatform.Module.Tools/LemonPlatform.Module.Tools.csproj
+++ b/LemonPlatform.Module.Tools/LemonPlatform.Module.Tools.csproj
@@ -18,6 +18,8 @@
 			<Private>false</Private>
 			<ExcludeAssets>runtime</ExcludeAssets>
 		</ProjectReference>
+
+		<ProjectReference Include="..\LemonPlatform.CustomControls\LemonPlatform.CustomControls.csproj" />
 	</ItemGroup>
 
 </Project>
